--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - service_auth_data:/var/lib/postgresql/data
   service-auth-app:
+    environment:
+      - ENVIRONMENT=SERVICE_DEV
     container_name: service-auth-app
     image: auth-app-img-dev
     build:
