add logger to write in files

--- a/env.example
+++ b/env.example
@@ -1,4 +1,7 @@
 POSTGRES_USER_AUTH=root
 POSTGRES_PASSWORD_AUTH=postgres
 POSTGRES_DB_AUTH=auth_service_db
-POSTGRES_DB_HOST=service-auth-db
+POSTGRES_DB_HOST=auth-db
+POSTGRES_USER=root
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=auth_service_db
