--- a/env.example
+++ b/env.example
@@ -1,7 +1,12 @@
-POSTGRES_USER_AUTH=root
-POSTGRES_PASSWORD_AUTH=postgres
-POSTGRES_DB_AUTH=auth_service_db
-POSTGRES_DB_HOST=auth-db
+POSTGRES_HOST=serviceauthpgdb
 POSTGRES_USER=root
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=auth_service_db
+APP_PORT=8004
+MONGO_INITDB=auth_service_db
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=password123
+MONGODB_LOCAL_URI=mongodb://root:password123@service-auth-mngdb:27017
+INTERNAL_DATABASE_URL_RENDER=
+HOST_ADRESS=http://localhost:8004
+CORS_ALLOWED_ORIGINS=http://localhost:3000/,http://localhost:80/,http://localhost:8080/
