add ouath v2 with google

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,6 +8,9 @@ COPY . /app
 RUN touch log/debug-log.log
 RUN touch log/error-log.log
 
+
+
+RUN go mod tidy
 RUN go mod download
 
 # Install Reflex for development
