--- a/env.example
+++ b/env.example
@@ -10,3 +10,8 @@ MONGODB_LOCAL_URI=mongodb://root:password123@service-auth-mngdb:27017
 INTERNAL_DATABASE_URL_RENDER=
 HOST_ADRESS=http://localhost:8004
 CORS_ALLOWED_ORIGINS=http://localhost:3000/,http://localhost:80/,http://localhost:8080/
+REDIS_PWD=redis123
+GOOGLE_REDIRECT_URL=http://localhost:4004/oauth/google/callback
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_RANDOM_STRING=
